# haskell-coverage

./: CHANGELOG.md  LICENSE  README.md  combine-tix.sh  coverage-cabal.project  haskell-coverage.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/Test/: Coverage.hs
src/Test/Coverage/: Arguments.hs  Codecov.hs  Configuration.hs  Coveralls.hs  Error.hs  Format.hs  Git.hs  Hpc.hs  Types.hs
src/Test/Coverage/Coveralls/: CIProvider.hs  Git.hs
src/Test/Coverage/Format/: Codecov.hs  Coveralls.hs
test/: Common.hs  CoverageTest.hs  CoverallsTest.hs  HpcTest.hs  Main.hs  Test.hs
test/testdata/: bad-format.tix  success.tix
test/testdata/emulator/mix/emulator6502-0.1.0.0-inplace/: Assembler.Analyze.mix  Assembler.Assemble.mix  Assembler.CodeGen.mix  Assembler.Error.mix  Assembler.Parser.mix  Assembler.Types.ASMState.mix  Assembler.Types.ASMStatement.mix  Assembler.Types.ASMTree.mix  Assembler.Types.Pretty.mix  Assembler.Types.mix  Assembler.Utils.mix  Decode.mix  Display.mix  Execution.mix  Flags.mix  Instruction.mix  Logging.mix  Memory.mix  Paths_emulator6502.mix  ProgramCounter.mix  Register.mix  Stack.mix  Types.mix  Utils.mix
test/testdata/emulator/tix/: emulator.tix
test/testdata/golden/hpc/: src-Assembler-Analyze.hs.golden  src-Assembler-Error.hs.golden  src-Assembler-Parser.hs.golden  src-Assembler-Types-ASMState.hs.golden  src-Assembler-Types-ASMStatement.hs.golden  src-Assembler-Types-ASMTree.hs.golden  src-Assembler-Types-Pretty.hs.golden  src-Assembler-Utils.hs.golden  src-Decode.hs.golden  src-Display.hs.golden  src-Execution.hs.golden  src-Flags.hs.golden  src-Instruction.hs.golden  src-Logging.hs.golden  src-Memory.hs.golden  src-ProgramCounter.hs.golden  src-Register.hs.golden  src-Stack.hs.golden  src-Types.hs.golden  src-Utils.hs.golden
