cabal-version:      3.0
name:               haskell-coverage
version:            0.1.0.0
synopsis:
    Translate Haskell HPC format into various code coverage formats

-- description:
license:            MIT
license-file:       LICENSE
author:             Nick Suchecki
maintainer:         nicksuchecki@gmail.com
copyright:          Nick Suchecki
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Test.Coverage
        Test.Coverage.Configuration
        Test.Coverage.Error
        Test.Coverage.Format
        Test.Coverage.Format.Coveralls
        Test.Coverage.Format.Codecov
        Test.Coverage.Hpc
    -- other-modules:

    build-depends:
        base                    ^>=4.16.3.0
        , bytestring
        , Cabal
        , directory             ^>=1.3
        , filepath              ^>=1.4
        , hpc
        , mtl                   ^>=2.2
        , optparse-applicative  ^>=0.17
        , typed-process         ^>=0.2

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        LambdaCase
        OverloadedStrings
        RecordWildCards

executable haskell-coverage
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0
        , haskell-coverage
        , optparse-applicative  ^>=0.17

    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        LambdaCase

test-suite haskell-coverage-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Common
        CoverageTest
        HpcTest

    build-depends:
      base                ^>=4.16.3.0
      , haskell-coverage
      , hpc
      , filepath          ^>=1.4
      , tasty
      , tasty-hunit

    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        LambdaCase
        RecordWildCards
