cabal-version:      3.4
name:               haskell-coverage
version:            0.1.0.0
synopsis:
    Translate Haskell HPC format into various code coverage formats

-- description:
license:            MIT
license-file:       LICENSE
author:             Nick Suchecki
maintainer:         nicksuchecki@gmail.com
copyright:          Nick Suchecki
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Test.Coverage
        Test.Coverage.Configuration
        Test.Coverage.Error
        Test.Coverage.Coveralls
        Test.Coverage.Codecov
        Test.Coverage.Hpc
        Test.Coverage.Types
    -- other-modules:

    build-depends:
        base                    ^>=4.16.3.0
        , aeson
        , bytestring
        , Cabal
        , containers
        , directory             ^>=1.3
        , filepath              ^>=1.4
        , hpc
        , mtl                   ^>=2.2
        , optparse-applicative  ^>=0.17
        , pureMD5
        , text                  ^>=2.0
        , typed-process         ^>=0.2

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        LambdaCase
        OverloadedStrings
        RecordWildCards

executable haskell-coverage
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0
        , bytestring
        , haskell-coverage
        , optparse-applicative  ^>=0.17

    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        LambdaCase

test-suite haskell-coverage-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Common
        CoverageTest
        HpcTest

    build-depends:
      base                ^>=4.16.3.0
      , aeson
      , bytestring
      , haskell-coverage
      , hpc
      , filepath          ^>=1.4
      , tasty
      , tasty-hunit
      , tasty-golden

    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        LambdaCase
        RecordWildCards
