cabal-version:      3.4
name:               haskell-coverage
version:            0.1.0.0
synopsis: Translate Haskell HPC format into various code coverage formats

description: Providing an up-to-date program to convert HPC into various code coverage formats. Currently, only Coveralls is supported, but potentially other formats will be supported.
license:            MIT
license-file:       LICENSE
author:             Nick Suchecki
maintainer:         nicksuchecki@gmail.com
copyright:          Nick Suchecki
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/drsooch/haskell-coverage

common coverage-options
    default-language: GHC2021
    build-depends: base ^>=4.16.3.0
    ghc-options: -Wall

library
    import:           coverage-options
    exposed-modules:  
        Test.Coverage
        Test.Coverage.Codecov
        Test.Coverage.Configuration
        Test.Coverage.Coveralls
        Test.Coverage.Error
        Test.Coverage.Git
        Test.Coverage.Hpc
        Test.Coverage.Types

    build-depends:
          aeson
        , bytestring
        , Cabal
        , containers
        , directory             ^>=1.3
        , filepath              ^>=1.4
        , hpc
        , http-client
        , http-client-tls
        , http-types
        , mtl                   ^>=2.2
        , optparse-applicative  ^>=0.17
        , pureMD5
        , text                  ^>=2.0
        , typed-process         ^>=0.2

    hs-source-dirs:   src
    default-extensions:
        LambdaCase
        OverloadedStrings
        RecordWildCards

executable haskell-coverage
    import:           coverage-options
    main-is:          Main.hs
    build-depends:
          bytestring
        , haskell-coverage
        , optparse-applicative  ^>=0.17

    hs-source-dirs:   app
    default-extensions:
        LambdaCase

test-suite haskell-coverage-test
    import:           coverage-options
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Common
        CoverageTest
        HpcTest

    build-depends:
        aeson
      , bytestring
      , haskell-coverage
      , hpc
      , filepath          ^>=1.4
      , tasty
      , tasty-hunit
      , tasty-golden

    hs-source-dirs:   test
    default-extensions:
        LambdaCase
        RecordWildCards
